@@ -41,9 +41,6 @@ class SettingsController (gobject.GObject, pretty.OutputMixin):
 		"Directories" : { "direct" : default_directories, "catalog" : (), },
 		"DeepDirectories" : { "direct" : (), "catalog" : (), "depth" : 1, },
 		'Keybindings': {},
-		"SessionPositions" : {
-			"main": "",
-		}
 	}
 	def __init__(self):
 		gobject.GObject.__init__(self)
@@ -316,20 +313,6 @@ class SettingsController (gobject.GObject, pretty.OutputMixin):
 
 	def set_directories(self, dirs):
 		return self._set_config("Directories", "direct", dirs)
-
-	def get_session_position(self, key, default=(-1, -1)):
-		"get ui object position for @key"
-		posstr = self.get_config("SessionPositions", key)
-		try:
-			x, y = ast.literal_eval(posstr)
-		except (SyntaxError, ValueError):
-			return default
-		return x, y
-
-	def set_session_position(self, key, value):
-		"set a ui object position key (x, y) pair"
-		x, y = value
-		self._set_config("SessionPositions", key, repr((x,y)))
 
 	def get_plugin_config(self, plugin, key, value_type=str, default=None):
 		"""Return setting @key for plugin names @plugin, try
